# macroquad-fractal

./: Cargo.toml  LICENSE  README.md  readme.md
shaders/: burning_ship.frag  fractal.vert  julia.frag  mandelbrot.frag  mandelbrot_perturb.frag
src/: color.rs  complex.rs  main.rs  renderer.rs  renderer_old.rs  view.rs
src/fractal/: burning_ship.rs  color.rs  julia.rs  mandelbrot.rs  mandelbrot_perturb.rs  mod.rs
src/renderer/: mod.rs  renderer.rs  view.rs
