[package]
name = "macroquad-fractal"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["Hunter Lawson"]
description = "A GPU-accelerated Mandelbrot and Julia set fractal renderer built with Rust and Macroquad."
repository = "https://github.com/hunterlawson/macroquad-fractal"
readme = "README.md"
keywords = ["fractal", "mandelbrot", "julia", "shader", "macroquad"]
categories = ["graphics", "visualization"]

[dependencies]
line-clipping = "0.3.7"
macroquad = "0.4.15"
rfd = "0.17.2"
strum = { version = "0.28.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
